# paulina-salgados

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
instance/: salgados.db
static/css/: customizado.css
templates/: base.html  cadastrar.html  contatos.html  editar.html  index.html  produtos.html
